# w2-programming-assignment-and-report-munawir355-main-

./: COMP1000 C1 W2 Report Template.docx  MyFunctions.ps1  README.md  build.ps1  comp1000C1W2.sln  fileee  go.ps1  tasks.docx
tasks/01-querydb/: CMakeLists.txt  main.cpp  studentrecord.h
tasks/02-addrecord/: CMakeLists.txt  main.cpp
tasks/03-updaterecord/: CMakeLists.txt  main.cpp  studentrecord.h
